--- a/2Exercise - Typography in CSS/09_Icon-Font-Buttons/styles.css
+++ b/2Exercise - Typography in CSS/09_Icon-Font-Buttons/styles.css
@@ -7,8 +7,8 @@ body {
 a {
     text-decoration: none;
     color :#fff;
-    border-radius: 5.40px;
-    padding: 12.6px 27px 12.6px;
+    border-radius: 5px;
+    padding: 12px 27px;
 }
 
 a:hover {
