--- a/5Exercise Responsive-Web-Design/05_Responsive-media-boxes/style.css
+++ b/5Exercise Responsive-Web-Design/05_Responsive-media-boxes/style.css
@@ -16,48 +16,78 @@ body {
 
 .card {
     background-color: rgb(255, 255, 255);
+    margin: 4em 4em 0 4em;
     display: block;
     width: 25em;
-    overflow: hidden;
+    height: auto;
     border: 1px solid #ccc;
     border-radius: 0.3em;
-    position: absolute;
-    top: 10%;
-    left: 5%;
-    
     box-shadow: 5px 5px #ccc;
+    position: relative;
+}
+
+.picture {
+    overflow: hidden;
+    position: relative;
+}
+
+.picture:before,
+.picture:after {
+    display: block;
+    content: '';
+}
+
+.picture:before {
+    padding-top: 56.25%;
+
+}
+
+.picture:after {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: rgba(0, 0, 0, 0.3);
+    box-shadow: 0 0 1em 0 rgba(0, 0, 0, 0.3) inset;
+}
+
+.picture img {
+    display: block;
+    width: 100%;
+    height: auto;
+    position: absolute;
+    left: 0;
+    top: 50%;
+    transform: translateY(-50%);
+
 }
 
 .card h3 {
     font-family: Georgia, serif;
     font-size: 1em;
     line-height: 1.2;
-    margin-bottom: 1em;
+    margin: 0;
+    padding-top: 1.5em;
 }
 
 .card p {
-    margin-bottom: 2em;
+    padding-top: 1em;
 }
 
 .card div:nth-child(2) {
-    padding: 1.5em;
-}
-
-.card img {
-    display: block;
-    width: 100%;
-    height: auto;
-
+    padding: 0.5em 1em 1em;
+    margin-bottom: 3em;
 }
 
 .card a {
+    margin-top: 1em;
     display: inline-block;
     background-color: rgb(0, 153, 0);
     text-decoration: none;
     padding: 0.3em;
     color: #fdf9f9;
     position: absolute;
-    bottom: 0;
-    right: 0;
-    transform: translate(-50%, -80%);
+    bottom: 10%;
+    right: 10%;
 }
