--- a/4Exercise-Flexbox/04_FlexModel-Calendar/style.css
+++ b/4Exercise-Flexbox/04_FlexModel-Calendar/style.css
@@ -15,30 +15,25 @@ body {
 .container {
     display: flex;
     max-width: 65vw;
+    margin: 0 auto;
 }
 
 span {
     border: 1px solid black;
     padding: 1em;
-    text-align: center;
+    display: block;
     flex-grow: 1;
     padding-bottom: 3em;
 }
 
 section {
     display: flex;
-    align-items: center;
-}
-
-.notes {
-    flex-direction: column;
-}
-
-.week {
     flex-wrap: wrap;
 }
 
+
+
 .week span:first-child,
 .week span:nth-child(7) {
-    flex-basis: 100%;
+    flex:1 0 100%;
 }
