--- a/4Exercise-Flexbox/06_Photo-gallery-flexbox/style.css
+++ b/4Exercise-Flexbox/06_Photo-gallery-flexbox/style.css
@@ -12,7 +12,7 @@ body {
 }
 
 .gallery {
-    display: flex;
+    margin: 0 auto;
     max-width: 45em;
 
 }
@@ -21,17 +21,19 @@ body {
     display: flex;
     flex-wrap: wrap;
     gap: 2em;
+    justify-content: center;
 
 }
 
 .gallery li {
     display: flex;
-    flex: 1 1 200px;
+    display: 0 0 220px;
+    flex: 0 0 200px;
     align-items: center;
     list-style: none;
     background-color: white;
     border: 5px solid black;
-    padding: 2em 1em;
+    padding:  1em;
     box-shadow: 0 0 1em 0.2em rgba(0, 0, 0, 0.4),
         0 0 0.5em 0.1em rgba(0, 0, 0, 0.3) inset;
 }
