--- a/exam prep/03.Fitness-Site-Resources/layout.css
+++ b/exam prep/03.Fitness-Site-Resources/layout.css
@@ -21,16 +21,15 @@ header {
     padding: 2em 0;
 }
 
-.content .container,
-.coaches .container {
+.column .style {
     display: flex;
     gap: 2em;
     
 }
 
-.content .container article,
-.coaches .container article {
-    flex: 1, 1, 30%;
+
+.style  article { 
+    flex: 1 1 30%;
     text-align: center;
 }
 
@@ -57,4 +56,8 @@ header {
 media img {
     width: 15%;
     margin: 0 auto;
+}
+
+footer p {
+    text-align: center;
 }
