--- a/exam prep/03.Fitness-Site-Resources/navigation.css
+++ b/exam prep/03.Fitness-Site-Resources/navigation.css
@@ -28,7 +28,11 @@
 .header-nav {
     padding: 1.5em;
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-end;
+}
+
+.site-title {
+    display: none;
 }
 
 
